# OpenGLStarter

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeLists.txt.old.cmake  OpenGLStarter.doxygen  README.md  README_old.md  linux_install_deps.sh  run_valgrind.sh
lib/aribeiro/: CMakeLists.txt
lib/aribeiro/src/: aribeiro.h.in  common.h
lib/aribeiro/src/math/: BresenhamIterator.h  EasingEquations.h  constants.h  floatOPs.h  geometricOperations.h  mat4.h  quat.h  vec2.h  vec3.h  vec4.h
lib/aribeiro/src/math/collision/: AABB.cpp  AABB.h  Frustum.cpp  Frustum.h  LineSegment.cpp  LineSegment.h  Plane.cpp  Plane.h  Ray.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
lib/aribeiro/src/platform/: PlatformMutex.cpp  PlatformMutex.h  PlatformPath.cpp  PlatformPath.h  PlatformSleep.h  PlatformThread.cpp  PlatformThread.h  PlatformTime.h
lib/aribeiro/src/util/: BinaryReader.cpp  BinaryReader.h  BinaryWriter.h  ColorConversion.h  Delegate.h  GetFirstMacAddress.cpp  GetFirstMacAddress.h  JPGHelper.cpp  JPGHelper.h  MethodPointer.h  NetworkConstants.h  PNGHelper.cpp  PNGHelper.h  PressReleaseDetector.h  Property.h  Random.cpp  Random.h  RunLengthEncoding.cpp  RunLengthEncoding.h  SSE2.cpp  SSE2.h  SetNullAndDelete.h  StringUtil.h  TransformStack.h  VirtualProperty.h
lib/glew/: CMakeLists.txt
lib/glew/src/: glew.c  glew.h
lib/libjpeg/: CMakeLists.txt
lib/libjpeg/src/: jdmarker.c  jerror.c  jmemmgr.c
libs/InteractiveToolkit-AppKit/common/appkit-window/: CMakeLists.txt
libs/InteractiveToolkit-AppKit/common/appkit-window-imgui/: CMakeLists.txt
libs/InteractiveToolkit-AppKit/common/appkit-window-imguizmo/: CMakeLists.txt
libs/InteractiveToolkit-AppKit/opengl/appkit-gl-base/: CMakeLists.txt
libs/InteractiveToolkit-AppKit/opengl/appkit-gl-base/src/: GLCubeMap.cpp  GLDynamicFBO.cpp  GLFramebufferObject.cpp  GLPostProcess.cpp  GLRenderBuffer.cpp  GLShader.cpp  GLTexture.cpp  GLVertexArrayObject.cpp  GLVertexBufferObject.cpp
libs/InteractiveToolkit-AppKit/opengl/appkit-gl-engine/: CMakeLists.txt
libs/InteractiveToolkit-AppKit/opengl/appkit-gl-engine/src/: Component.cpp  DefaultEngineShader.cpp  Engine.cpp  ResourceMap.cpp  StartEventManager.cpp  Transform.cpp
libs/InteractiveToolkit-AppKit/opengl/appkit-gl_glad/: CMakeLists.txt
libs/InteractiveToolkit-AppKit/opengl/appkit-gl_glad/src/: egl.c  gl.c
libs/InteractiveToolkit-AppKit/opengl/appkit-ui/: CMakeLists.txt
libs/InteractiveToolkit-AppKit/physics/appkit-physics/: CMakeLists.txt
libs/InteractiveToolkit-DPI/: CMakeLists.txt
libs/InteractiveToolkit-DPI/include/InteractiveToolkit-DPI/: InteractiveToolkit-DPI.h
libs/InteractiveToolkit-DPI/src/: .gitignore  InteractiveToolkit-DPI.cpp
libs/Lua/: .gitignore  CMakeLists.txt
libs/LuaJIT/: .gitignore  CMAKE_BUILD.md  CMakeLists.txt  INTEGRATION_EXAMPLE.cmake  git_fetch.sh
projects-lib/ft2-wrapper/: CMakeLists.txt
projects-lib/rtvideo/: CMakeLists.txt  RTVideoInput.cpp  RTVideoInput.h  rtvideo.h.in
projects-lib/rtvideo/avfoundation/: avfoundation.h  avfoundation.mm  videotoolbox.h  videotoolbox.mm
projects-lib/rtvideo/v4l2/: v4l2.cpp
projects/collision/: App.cpp  App.h  CMakeLists.txt  main.cpp
projects/collision/CustomComponents/: ComponentFrustumVisibleSetColor.cpp  ComponentFrustumVisibleSetColor.h
projects/collision/unity-export-scene/: export-scene.unitypackage
projects/collision/util/: ReferenceCounter.h
src/imgui_editor/: App.cpp  App.h  CMakeLists.txt  InnerViewport.cpp  InnerViewport.h  OpenFolderDialog.cpp  OpenFolderDialog.h  Scene3D.cpp  Scene3D.h  SceneGUI.cpp  SceneGUI.h  ServiceController.h  main.cpp  service_list.json
src/imgui_editor/EditorLogic/: Clipboard.cpp  Clipboard.h  Editor.cpp  Editor.h  FolderFileOperations.cpp  FolderFileOperations.h  HierarchyOperations.cpp  HierarchyOperations.h  OperationsCommon.cpp  OperationsCommon.h
src/imgui_editor/ImGui/: ContextMenu.cpp  ContextMenu.h  CustomSettings.h  Dialogs.cpp  Dialogs.h  ImGuiManager.cpp  ImGuiManager.h  ImGuiMenu.cpp  ImGuiMenu.h  ShortcutManager.cpp  ShortcutManager.h
src/imgui_editor/ImGui/ImGuiExt/: CenteredText.h
src/imgui_editor/ImGui/View/: Console.cpp  Console.h  Game.cpp  Game.h  Hierarchy.cpp  Hierarchy.h  HierarchyTreeNode.cpp  HierarchyTreeNode.h  Inspector.cpp  Inspector.h  InspectorImGuiComponent.cpp  InspectorImGuiComponent.h  Project.cpp  Project.h  Scene.cpp  Scene.h  TreeNode.cpp  TreeNode.h  View.cpp  View.h  VisualList.cpp  VisualList.h  VisualTree.cpp  VisualTree.h  all.h  common.cpp  common.h
src/ipc_fullscreen_viewer/: App.cpp  App.h  CMakeLists.txt  MainScene.cpp  MainScene.h  appicon.rc  main.cpp  projector.xcf
src/ipc_fullscreen_viewer/resources/: Roboto-Regular-100.basof2  Roboto-Regular-80.basof2
src/tech-demo-sprite-atlas/: App.cpp  App.h  CMakeLists.txt  MainScene.cpp  MainScene.h  main.cpp
src/tech-demo-sprite-atlas/components/: ComponentGrow.cpp  ComponentGrow.h  ComponentSprite.cpp  ComponentSprite.h  ComponentUI.cpp  ComponentUI.h  SpriteAtlas.cpp
src/tech-demo-sprite-atlas/components/ui/: ComponentFont.cpp  ComponentFont.h  ComponentRectangle.cpp  ComponentRectangle.h  ComponentUI.cpp  ComponentUI.h  UIItem.cpp  UIItem.h  UIItem_get_set.inl  common.h
src/tech-demo-sprite-atlas/shaders/: MaskCommon.cpp  MaskCommon.h  ShaderUnlitTextureVertexColorAlphaWithMask.cpp  ShaderUnlitTextureVertexColorAlphaWithMask.h  ShaderUnlitVertexColorWithMask.cpp  ShaderUnlitVertexColorWithMask.h  SpriteShader.cpp  SpriteShader.h  SpriteShaderWithMask.cpp  SpriteShaderWithMask.h
src/tech-demo-sprite-atlas/util/: SpriteAtlas.cpp  SpriteAtlas.h
src/test-open-window/: CMakeLists.txt  fractional_scaling.md  gnome_display_managemente.md  list_resolutions.md  main.cpp  monitors_main.cpp  monitors_main.h  wayland_query_monitors.h  wl_output_monitor.cpp  wl_output_monitor.h  xdg_output_monitor.cpp  xdg_output_monitor.h  zwlr_output_monitor.cpp  zwlr_output_monitor.h
src/test-pbr-coefs/: CMakeLists.txt  Date.h  FileIterator.h  generation.h  linear_depth.h  main.cpp  pbr.h  polar.h
src/test-pbr-coefs/FileSystem/: Date.h  Directory.h  File.h
(+1150 files in other folders)
